wacc_test/sample_programs/invalid/semanticErr/array/arrayTypeClash.wacc
# arrays can only contain one type

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int[] b = ["1", "2", "3"]
end
